tests/cases/should_fail/literals/unclosed_set_literal.hash
// run=fail, stage=parse

k := set{ 1,
