tests/cases/should_fail/literals/unclosed_set_literal.stderr
error: encountered unclosed delimiter `{`, add a `}` after the inner expression
 --> $DIR/unclosed_set_literal.hash:1:9
1 |   k := set{ 1,
  |           ^ here
